Add : 개발환경 셋팅
- isort 설치
- black 설치
- flake8 설치
- pre-commit 설정
- CI 파이프 라인 설정

--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,10 @@ name = "pypi"
 [packages]
 django = "*"
 djangorestframework = "*"
+pre-commit = "*"
+black = "*"
+flake8 = "*"
+isort = "*"
 
 [dev-packages]
 
