Hotfix : #1 my_settings.py gitignore 추가
- SECRET키 변경하고 my_settings.py파일로 분리

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/django
 # Edit at https://www.toptal.com/developers/gitignore?templates=django
 .idea
-
+/config/my_settings.py
 ### Django ###
 *.log
 *.pot
